# databricks

./: authoring.ipynb  demo.py  pyproject.toml
outputs/2024-10-11/11-59-08/.hydra/: hydra.yaml
outputs/2024-10-11/11-59-35/.hydra/: hydra.yaml
outputs/2024-10-11/11-59-47/.hydra/: hydra.yaml
outputs/2024-10-11/12-01-44/.hydra/: config.yaml  hydra.yaml
outputs/2024-10-11/12-01-59/.hydra/: hydra.yaml
outputs/2024-10-11/12-02-11/.hydra/: hydra.yaml
outputs/2024-10-11/12-02-26/.hydra/: config.yaml  hydra.yaml
